# MarlinMT

./: CMakeLists.txt
benchmarking/: PlotScaling.C  run-benchmarking
cmake/: MarlinBuild.cmake
examples/: new-config.md  new_config_nested.xml  new_config_nested_list.xml  new_config_simple.xml  new_config_tools.xml  read_config_nested.cc  read_config_nested_list.cc  read_config_simple.cc  read_config_tools.cc
source/: CMakeLists.txt
source/dd4hep/: CMakeLists.txt
source/framework/include/marlin/: Algorithm.h  AlgorithmTool.h  Component.h  MarlinApi.h  Property.h  Utils.h
source/framework/src/: Property.cc  StringParameters.cc
source/gear/: CMakeLists.txt
source/include/marlin/: Application.h  Utils.h
source/python/: CMakeLists.txt
source/python/python/: test.py
source/python/src/: test.cc
